--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -8,16 +8,17 @@
     <br>
     <div class="row">
       <p class="lead">
-        Open-Source Full-Stack Solution For MEAN Applications
+The Top Place for Encrypted Chat and Uncensored Talk
       </p>
     </div>
     <div class="row">
       <p>
-        <a class="btn btn-primary btn-lg" href="http://meanjs.org" target="_blank">Learn more</a>
+        <a class="btn btn-primary btn-lg" ui-sref="authentication.signup" target="_blank">Sign Up!</a>
+        <a class="btn btn-success btn-lg" ui-sref="authentication.signup" target="_blank">Sign In!</a>
       </p>
     </div>
   </div>
-  <div>
+  <!-- <div>
     <h2>Congrats! You've configured and run the sample application.</h2>
     <p>MEAN.JS is a web application boilerplate, which means you should start changing everything :-)</p>
     <p>This sample application tracks users and articles.</p>
@@ -65,10 +66,10 @@
       Once you're familiar with the foundation technology, check out the MEAN.JS Documentation:
       <ul>
         <li><a target="_blank" href="http://meanjs.org/docs.html">MEAN.JS Documentation</a>
-        </li>
+        </li> -->
         <!-- <li><a target="_blank" href="http://meanjs.org/generator.html">Yeoman Generator</a>
 				</li> -->
-        <li><a target="_blank" href="http://meanjs.org/modules.html">Modules</a>
+        <!-- <li><a target="_blank" href="http://meanjs.org/modules.html">Modules</a>
         </li>
         <li><a target="_blank" href="http://meanjs.org/changelog.html">Changelog</a>
         </li>
@@ -80,5 +81,5 @@
     </p>
   </div>
   <br>Enjoy &amp; Keep Us Updated,
-  <br>The MEAN.JS Team.
+  <br>The MEAN.JS Team. -->
 </section>
