fix nomeclature and some style

--- a/modules/secretspaces/client/views/form-secretspace.client.view.html
+++ b/modules/secretspaces/client/views/form-secretspace.client.view.html
@@ -6,10 +6,10 @@
     <form name="vm.form.secretspaceForm" class="form-horizontal" ng-submit="vm.save(vm.form.secretspaceForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
-          <label class="control-label" for="name">Name</label>
-          <input name="name" type="text" ng-model="vm.secretspace.name" id="name" class="form-control" placeholder="Name" required>
+          <label class="control-label" for="name">Title</label>
+          <input name="name" type="text" ng-model="vm.secretspace.name" id="name" class="form-control" placeholder="Title" required>
           <div ng-messages="vm.form.secretspaceForm.name.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Secretspace name is required.</p>
+            <p class="help-block error-text" ng-message="required">Secretspace title is required.</p>
           </div>
         </div>
         <div class="form-group">
