--- a/modules/chat/client/views/chat.client.view.html
+++ b/modules/chat/client/views/chat.client.view.html
@@ -7,16 +7,18 @@
   <form class="col-xs-12 col-md-offset-4 col-md-4" ng-submit="sendMessage();">
     <fieldset class="row">
       <div class="input-group">
-        <input type="text" id="messageText" name="messageText" class="form-control" ng-model="messageText" placeholder="Enter new message">
+        <input type="text" id="messageText" rows="3" name="messageText" class="form-control" ng-model="messageText" placeholder="Enter new message">
         <span class="input-group-btn">
           <button type="submit" class="btn btn-primary" ng-disabled="!messageText.length">Submit</button>
         </span>
       </div>
     </fieldset>
   </form>
-  <ul class="list-unstyled">
+  <div class="panel panel-sm">
+    <div class="panel-body">
+  <ul class="list">
     <!-- List all messages -->
-    <li class="col-xs-12 col-md-offset-4 col-md-4 chat-message" ng-repeat="message in messages">
+    <li class="col-xs-12 col-md-offset-4 col-md-4 chat-message " ng-repeat="message in messages">
       <small class="pull-right text-muted" ng-bind="message.created | date:'mediumTime'"></small>
       <img ng-src="{{message.profileImageURL}}" alt="{{message.username}}" class="pull-left chat-profile-image" />
       <div class="pull-left chat-message-details">
@@ -26,4 +28,6 @@
       </div>
     </li>
   </ul>
+</div>
+</div>
 </section>
