--- a/modules/publicspaces/client/views/form-publicspace.client.view.html
+++ b/modules/publicspaces/client/views/form-publicspace.client.view.html
@@ -6,10 +6,10 @@
     <form name="vm.form.publicspaceForm" class="form-horizontal" ng-submit="vm.save(vm.form.publicspaceForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
-          <label class="control-label" for="name">Name</label>
+          <label class="control-label" for="name">Title</label>
           <input name="name" type="text" ng-model="vm.publicspace.name" id="name" class="form-control" placeholder="Name" required>
           <div ng-messages="vm.form.publicspaceForm.name.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Publicspace name is required.</p>
+            <p class="help-block error-text" ng-message="required">Publicspace Title is required.</p>
           </div>
           <div class="form-group" show-errors>
             <label class="control-label" for="shout">Shout</label>
