--- a/modules/users/client/css/users.css
+++ b/modules/users/client/css/users.css
@@ -34,7 +34,7 @@
   min-height: 150px;
   max-height: 150px;
 }
-img {
+/*img {
     opacity: 0.4;
-    filter: alpha(opacity=40); /* msie */
-}
+    filter: alpha(opacity=40); msie
+}*/
