--- a/modules/secretspaces/client/views/list-secretspaces.client.view.html
+++ b/modules/secretspaces/client/views/list-secretspaces.client.view.html
@@ -14,6 +14,10 @@
         <span data-ng-if="!secretspace.user">Deleted User</span>
       </small>
       <h4 class="list-group-item-heading" data-ng-bind="secretspace.name"></h4>
+      <ul>
+        <li><h5 class="list-group-item-heading" data-ng-bind="secretspace.whisper"></h5></li>
+        <li><h5 class="list-group-item-heading" data-ng-bind="secretspace.friends"></h5></li>
+      </ul>
     </a>
   </div>
   <div class="alert alert-warning text-center" data-ng-if="vm.secretspaces.$resolved && !vm.secretspaces.length">
