--- a/modules/secretspaces/client/views/form-secretspace.client.view.html
+++ b/modules/secretspaces/client/views/form-secretspace.client.view.html
@@ -12,6 +12,20 @@
             <p class="help-block error-text" ng-message="required">Secretspace title is required.</p>
           </div>
         </div>
+        <div class="form-group" show-errors>
+          <label class="control-label" for="name">Whisper</label>
+          <input name="name" type="text" ng-model="vm.secretspace.name" id="name" class="form-control" placeholder="Whisper" required>
+          <div ng-messages="vm.form.secretspaceForm.name.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Secretspace title is required.</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
+          <label class="control-label" for="friends">Friends</label>
+          <input name="friends" type="text" ng-model="vm.secretspace.friends" id="friends" class="form-control" placeholder="Friends" required>
+          <div ng-messages="vm.form.secretspaceForm.friends.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Secretspace title is required.</p>
+          </div>
+        </div>
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.secretspace._id ? 'Update' : 'Create'}}</button>
         </div>
