add non persist liked

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -65,3 +65,7 @@ a:hover .header-profile-image {
     background-color: #4E9D64;
     background-image: none;
 }
+b, strong {
+    font-weight: bold;
+    color: magenta;
+}
