--- a/modules/secretspaces/client/views/form-secretspace.client.view.html
+++ b/modules/secretspaces/client/views/form-secretspace.client.view.html
@@ -14,8 +14,8 @@
         </div>
         <div class="form-group" show-errors>
           <label class="control-label" for="name">Whisper</label>
-          <input name="name" type="text" ng-model="vm.secretspace.name" id="name" class="form-control" placeholder="Whisper" required>
-          <div ng-messages="vm.form.secretspaceForm.name.$error" role="alert">
+          <input name="whisper" type="text" ng-model="vm.secretspace.whisper" id="whisper" class="form-control" placeholder="Whisper" required>
+          <div ng-messages="vm.form.secretspaceForm.whisper.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Secretspace title is required.</p>
           </div>
         </div>
