--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -8,9 +8,10 @@
     <br>
     <div class="row">
       <p class="lead">
-The Top Place for Encrypted Chat and Uncensored Talk
+The <strong>Top Place</strong> for Encrypted Chat and Uncensored Talk
       </p>
     </div>
+    <div class="fb-like" data-share="true" data-width="450" data-show-faces="true"></div>
     <div class="row">
       <p>
         <a class="btn btn-primary btn-lg" ui-sref="authentication.signup" target="_blank">Sign Up!</a>
@@ -19,9 +20,9 @@ The Top Place for Encrypted Chat and Uncensored Talk
     </div>
   </div>
   <div>
-    <h2>Congrats! You've come accoss the future of Online Chat and Talk.</h2>
-    <p>ourSpace is the best social network platform ever invented!</p>
-    <p>Sign up for a FREE account, and you will be able to:.</p>
+    <h2>Congrats! You've come accoss the <strong>future</strong> of Online Chat and Talk.</h2>
+    <p>our<strong>S</strong>pace is the best social network platform ever invented!</p>
+    <p>Sign up for a FREE account, and you will be able to:</p>
     <ul>
       <li>
       Chat with ANYONE!
@@ -39,15 +40,15 @@ The Top Place for Encrypted Chat and Uncensored Talk
   </div>
   <div class="row">
     <div class="col-md-3">
-      <h2>our<strong>C</strong>hat</h2>
+      <h2 ui-serf="chat">our<strong>C</strong>hat</h2>
       <p> With EVERYONE AND ANYONE. You can block people too if you want, but we discourage that.</p>
     </div>
     <div class="col-md-3">
-      <h2>public<strong>S</strong>paces</h2>
+      <h2 ui-serf="publicspaces.list">public<strong>S</strong>paces</h2>
       <p>Create unlimited "publicSpaces", places where you can speak your mind, for all the world to see! Public has 2 main meanings: 1. of or concerning the people as a whole. 2. done, perceived, or existing in open view.</p>
     </div>
     <div class="col-md-3">
-      <h2>secret<strong>S</strong>aces</h2>
+      <h2 ui-serf="secretspaces.list">secret<strong>S</strong>paces</h2>
       <p>Create unlimited "secretSpaces", places where you can hide. Secret is defined by smart people as not known or seen or not meant to be known or seen by others.</p>
     </div>
     <div class="col-md-3">
