--- a/modules/publicspaces/client/views/list-publicspaces.client.view.html
+++ b/modules/publicspaces/client/views/list-publicspaces.client.view.html
@@ -3,20 +3,34 @@
     <h1>Publicspaces</h1>
   </div>
   <div class="list-group">
-    <a data-ng-repeat="publicspace in vm.publicspaces"
-       data-ui-sref="publicspaces.view({ publicspaceId: publicspace._id })"
-       class="list-group-item">
-      <small class="list-group-item-text">
+    <a data-ng-repeat="publicspace in vm.publicspaces" data-ui-sref="publicspaces.view({ publicspaceId: publicspace._id })" class="list-group-item">
+      <row>
+        <button data-ng-click="vm.publicspace.liked = vm.publicspace.liked + 1" class="btn btn-success btn-xs" aria-pressed="false" autocomplete="off">
+          <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> Like
+        </button>
+        <button type="toggle" class="btn btn-danger btn-xs" data-toggle="button" aria-pressed="false" autocomplete="off">
+          <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Hate
+        </button>
+        <small class="list-group-item-text">
         Posted on
         <span data-ng-bind="publicspace.created | date:'mediumDate'"></span>
         by
         <span data-ng-if="publicspace.user" data-ng-bind="publicspace.user.displayName"></span>
         <span data-ng-if="!publicspace.user">Deleted User</span>
       </small>
-      <h4 class="list-group-item-heading" data-ng-bind="publicspace.name"></h4>
+        <h4 class="list-group-item-heading" data-ng-bind="publicspace.name"></h4>
+        <small><span>Liked: <p class="list-group-item-heading" data-ng-bind="publicspace.liked"></p></span>
+        <span>Hated: <p class="list-group-item-heading" data-ng-bind="publicspace.hated"></p></span></small>
+        <div ng-app>
+      </row>
     </a>
   </div>
   <div class="alert alert-warning text-center" data-ng-if="vm.publicspaces.$resolved && !vm.publicspaces.length">
     No Publicspaces yet, why don't you <a data-ui-sref="publicspaces.create">create one</a>?
   </div>
+  <div ng-init="counter = 0"></div>
+  <button ng-click="counter = counter + 1">Increment</button>
+  <button ng-click="counter = counter - 1">Decrement</button>
+ {{counter}}
+</div>
 </section>
