--- a/modules/secretspaces/client/views/list-secretspaces.client.view.html
+++ b/modules/secretspaces/client/views/list-secretspaces.client.view.html
@@ -17,6 +17,7 @@
       <ul>
         <li><h5 class="list-group-item-heading" data-ng-bind="secretspace.whisper"></h5></li>
         <li><h5 class="list-group-item-heading" data-ng-bind="secretspace.friends"></h5></li>
+        <li><h5 class="list-group-item-heading" data-ng-bind="secretspace.crypto"></h5></li>
       </ul>
     </a>
   </div>
