fix facebook and twitter login

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -20,7 +20,7 @@ The <strong>Top Place</strong> for Encrypted Chat and Uncensored Talk
     </div>
   </div>
   <div>
-    <h2>Congrats! You've come accoss the <strong>future</strong> of Online Chat and Talk.</h2>
+    <h2>Congrats! You've come accoss the really real <strong>future</strong> of Online Chat and Talk.</h2>
     <p>our<strong>S</strong>pace is the best social network platform ever invented!</p>
     <p>Sign up for a FREE account, and you will be able to:</p>
     <ul>
