--- a/modules/publicspaces/client/views/view-publicspace.client.view.html
+++ b/modules/publicspaces/client/views/view-publicspace.client.view.html
@@ -29,7 +29,7 @@
   <a class="btn btn-success" data-ng-click="vm.publicspace.liked = vm.publicspace.liked + 1">
     <i class="glyphicon glyphicon-thumbs-up"></i>
   </a>
-  <a class="btn btn-warning" data-ng-click="vm.publicspace.liked = vm.publicspace.liked - 1">
+  <a class="btn btn-danger" data-ng-click="vm.publicspace.liked = vm.publicspace.liked - 1">
     <i class="glyphicon glyphicon-thumbs-down"></i>
   </a>
     <button type="submit" class="btn btn-default">{{vm.publicspace._id ? 'Update' : 'Create'}}</button>
